tests/extensions/mime/errors/extracttext-nofep.sieve
require "extracttext";
require "variables";

keep;
